assets/style.css
html {
	/*width:auto;*/
	height:100%;
}

/* #name & or .nav may be causing issues with bootstrap responsive layout when resizing*/

h1, h2, h3 {
	font-family: 'Georgia', Times, Times New Roman, serif;
	color: #4aaaa5;
}


#name {
    margin-left: 118px;
    border: solid 1px #4aaaa5;
    background-color: #4aaaa5;
    color: white;
    font-size: 30px;
    font-family: 'Georgia', Times, Times New Roman, serif;
    padding: 10px;
    line-height: 30px;
}
.sidebar {
	width:auto;
}

#side {
	color:#4aaaa5;
	font-weight: bold;
}


.nav {
	margin-right:240px;
}

.main {
	border-style:solid;
	border-width:1px;
	border-color:#dddddd;
	background-color: #ffffff;
	/*width:623px;*/
	padding-left:25px;
}
.mainDiv {
	padding-bottom:20px;
}

#bioPic {
	width:100%;
	height:auto;
}


/* site and content classes for sticky footer */
.site {
	height: 100%;
	display: flex;
	flex-direction: column;
	background-image:url(../assets/images/topography.png);
}
.content {
	flex: 1 0 auto;
}

footer {
	width: auto;
    background-color: #666666;
	border-top: 5px solid #4aaaa5;
	color: #ffffff;
	font-size: 11px;
	text-align: center;
	padding-top: 20px;
	padding-bottom: 20px;
}

/* below here is css for contact.html */

/* NOTE: <textarea> may be causing problems with bootstrap responsive layout*/


textarea {
	border: 1px solid #cccccc;
	border-radius: 3px;
	font-size: 20px;
	color: inherit;
	padding-bottom: 100px;
  	width: 100%;
	font-size: 13px;
	color: inherit;
	margin-top: 10px;
}



/* below here is @media queries*/


@media screen and (max-width: 991px) {

	.sidebar {
		margin-top: 25px;
	}

}


/*
  These rules take effect when the browser's width
  is either 640px or less.
*/
@media screen and (max-width: 640px) {
  /* The body's bg color will be #333 
  html {
    background-image:url(../assets/images/topography.png);
  }
  */

	.wrapper {
	    width: 100%;
	  }

	#name {
		margin:0px;
	}
	.sidebar {
		margin-top: 25px;
	}
}

